# public-moq-demo

./: Dockerfile.media  Dockerfile.streaming  docker-compose.yml  docker-entrypoint.sh  run-streaming.sh
.github/workflows/: docker-push.yaml
cert/: chrome-cert.sh
evaluate/: .gitignore  calculate_latency.py  clear.ps1  metrics_comparison.ipynb  pyproject.toml  watch_and_download.py  watch_and_download_async.py
media/: run-stream-server.sh
player/: Dockerfile  package-lock.json  package.json  run.sh  tsconfig.json
player/cert/: localhost.crt  localhost.csr  localhost.pem
player/src/: appsettings.js  db.ts  fragment.ts  index.html  index.ts  manifest.json  player.css  player.ts  segment.ts  service-worker.js  track.ts
player/src/common/: fragment.ts  init.ts  mp4box.all.js  player.ts  plotly.config.ts  queue.ts  segment.ts  source.ts  stream.ts  track.ts
player/src/common/types/: global.d.ts  webtransport.d.ts
player/src/common/util/: estimator.ts  message.ts  mp4.ts
player/src/style/: player.css
server/: go.mod  go.sum  main.go
server/internal/warp/: datagram.go  hybrid.go  media.go  message.go  send_datagram.go  server.go  session.go  stream.go
