[tool.poetry]
name = "evaluate"
version = "0.1.0"
description = ""
authors = ["Ren <renrror@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytesseract = "^0.3.13"
playwright = "^1.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
